Mon Jun 28 16:26:00 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * modules/WorkspaceCreator.pm:

          Bug fix where the negated types in excludes () were not
          handled correctly.
          
Mon Jun 28 05:55:54 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          The Id attribute for the exename/sharedname was not normalized.

Mon Jun 28 05:42:48 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          Bug fix where the generated Id for the File element contained
          invalid characters.

Mon Jun 28 04:46:49 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          Bug fix where the File element used the auto-generated Id
          attribute, which resulted in duplicate keys in the installer
          when different project had files with the same name.

Fri Jun 25 21:56:03 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:

          When parsing the .am file, a line with a : is not an explicit target
          if it's a continuation of the previous line (ending with \).

Wed Jun 23 18:08:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:
          Upgraded TAO version in preparation of the upcoming release

Thu Jun 17 03:32:07 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * config/wix.mpb:

          Reverted change below.

Thu Jun 17 03:27:06 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * config/wix.mpb:

          Moved the quote tags to a different location.

Mon Jun 14 23:52:33 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          Bug fix where invalid Id is generated if the binary's
          name contained a dash.

          Added support for installing GME decorators.
